# postgres-wasm-fdw

./: .gitignore  .pages.yml  Cargo.toml  README.md  local-dev.sh
.github/workflows/: release_wasm_fdw.yml
src/: bindings.rs  lib.rs
src/posts/: 2024-08-01-developing-a-wasm-wrapper.md  2024-08-01-ecosystem-discover-wasm-fdws.md  2024-08-01-getting-started.md  2024-08-01-installing-a-postgres-wasm-fdw.md
wit/: world.wit
