[package]
name = "wasm_fdw_example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = "debuginfo"
lto = true

[dependencies]
wit-bindgen-rt = "0.26.0"
serde_json = "1.0"

[package.metadata.component]
package = "my-company:example-fdw"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"supabase:wrappers" = { path = "./supabase-wrappers-wit" }
